--- a/cities.html
+++ b/cities.html
@@ -37,9 +37,73 @@
         <div class="col-md">Rome</div>
 
     </div>
-
 <br>
 <p>The city name breaks first and comes under the first alphabet T when reducing the size slowly.</p>
+
+<div class="container">
+  <h2>Responsive Images</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <img src="Austin.jpg" alt="Chicago" class="img-fluid" style="width: 400px; height: 350px;">
+      </div>
+      <div class="col-md-4">
+        <img src="Italy.jpg" alt="Houston" class="img-fluid" style="width: 400px; height: 350px;">
+      </div>
+      <div class="col-md-4">
+        <img src="Tokyo.jpg" alt="Edinburgh" class="img-fluid" style="width: 400px; height: 350px;">
+
+    </div>
+  </div>
+</div>
+
+
+<hr>
+
+<div class="container">
+  <h2>Thumbnail Images</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <img src="Austin.jpg" alt="Chicago" class="img-thumbnail" style="width: 400px; height: 350px;">
+    </div>
+    <div class="col-md-4">
+      <img src="Italy.jpg" alt="Houston" class="img-thumbnail" style="width: 400px; height: 350px;">
+    </div>
+    <div class="col-md-4">
+      <img src="Tokyo.jpg" alt="Edinburgh" class="img-thumbnail" style="width: 400px; height: 350px;">
+    </div>
+  </div>
+</div>
+<hr>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2">Larry the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
 
 </body>
 </html>
