--- a/cities.html
+++ b/cities.html
@@ -75,35 +75,61 @@
 </div>
 <hr>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
+<br>
+      <table class="table table-striped table-hover caption-top table-bordered">
+                
+        <caption> Boostrap Table with Headers "City", "River", and "Tree"</caption>
+        <thead>
+            <tr>
+                <th scope="col">Letter</th>
+                <th scope="col">City</th>
+                <th scope="col">River</th>
+                <th scope="col">Tree</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="table-primary">  
+                <th scope="row">T</th>
+                <td>Tokyo</td>
+                <td>Thames River</td>
+                <td>Tulip Tree</td>
+            </tr>
+            <tr class="table-info">
+                <th scope="row">A</th>
+                <td>Austin</td>
+                <td>Amazon River</td>
+                <td>Apple Tree</td>
+            </tr>
+            <tr class="table-success">
+                <th scope="row">N</th>
+                <td>Nagpur</td>
+                <td>Nile River</td>
+                <td>Norway mapple Tree</td>
+            </tr>
+            <tr class="table-light">
+                <th scope="row">N</th>
+                <td>Noida</td>
+                <td>Niger River</td>
+                <td>Northern red oak Tree</td>
+            </tr>
+            <tr class="table-danger">
+                <th scope="row">I</th>
+                <td>Italy</td>
+                <td>Indus River</td>
+                <td>Ironwood Tree</td>
+            </tr>
+            <tr class="table-warning">
+                <th scope="row">R</th>
+                <td>Rome</td>
+                <td>Rhine River</td>
+                <td>Red mapple Tree</td>
+            </tr>
+      </tbody>
+    </table>
+    <br>
+
+    
+
 
 </body>
 </html>
