--- a/cities.html
+++ b/cities.html
@@ -128,7 +128,37 @@
     </table>
     <br>
 
-    
+    <label>Button</label>
+    <br>
+    <div>
+      <button type="button" class="btn btn-info">T</button>
+      <button type="button" class="btn btn-success">A</button>
+      <button type="button" class="btn btn-light">N</button>
+      <button type="button" class="btn btn-success">N</button>
+      <button type="button" class="btn btn-danger">I</button>
+      <button type="button" class="btn btn-info">R</button>
+  </div>
+    <br>
+    <nav class="navbar"></nav> 
+    <span class="navbar-label">Button Groups</span>
+     </nav>
+      <div class="btn-toolbar">
+      <div class="btn-group">
+          <button class="btn btn-success">A</button>
+          <button class="btn btn-success">I</button>
+          <button class="btn btn-success">T</button>
+      </div>
+
+      <div class="btn-group">
+          <button class="btn btn-warning">R</button>
+          <button class="btn btn-warning">N</button>
+      </div>
+      
+      <div class="btn-group">
+          <button class="btn btn-danger">N</button>
+      </div>
+  </div>
+      <br>
 
 
 </body>
